--- a/gfx/style.css
+++ b/gfx/style.css
@@ -211,6 +211,7 @@ button[type="submit"]:hover {
 #infoBar ul li {
 	display: inline-block;
 	margin: 7px;
+	cursor: default;
 }
 
 #infoBar ul li a {
