--- a/gfx/style.css
+++ b/gfx/style.css
@@ -195,6 +195,7 @@ button[type="submit"]:hover {
 
 #infoBar {
 	position: absolute;
+	display: none;
 	z-index: 99999999;
 	font-family: "Helvetica", "Arial", sans-serif;
 	font-size: 16px;
@@ -212,25 +213,29 @@ button[type="submit"]:hover {
 	display: inline-block;
 	margin: 7px;
 	cursor: default;
+	-webkit-transition-property: all;
+	-webkit-transition-duration: 0.3s;
 }
 
 #infoBar ul li a {
-	content: '';
+	text-align: center;
 	display: inline-block;
 	border: 0px solid #000;
 	background: #AAA;
 	padding: 0;
 	margin-right: 7px;
-	width: 18px;
-	height: 18px; line-height: 13px;
-	font-size: xx-small;
+	width: 20px;
+	height: 20px; line-height: 20px;
+	font-size: 18px;
 	overflow: hidden;
 	border-radius: 9px;
-	-webkit-transition-property: all;
-	-webkit-transition-duration: 0.3s;
 	-webkit-app-region: no-drag;
-	color: #CCC;
+	color: #000;
 	opacity: 1.0;
+}
+
+#infoBar ul li.checked{
+	opacity: 0.5;
 }
 
 #infoBar ul li a.t0{
