--- a/gfx/style.css
+++ b/gfx/style.css
@@ -72,8 +72,9 @@
 {
 	z-index: 2000;
 	content: '';
+	display: none;
 	border: 0px solid #000;
-	background: #AAA;
+	background: #666;
 	padding: 0;
 	width: 22px;
 	height: 22px; line-height: 3px;
@@ -81,7 +82,7 @@
 	font-size: xx-small;
 	overflow: hidden;
 	position: absolute;
-	border-radius: 7px;
+	border-radius: 13px;
 	-webkit-transition-property: all;
 	-webkit-transition-duration: 0.3s;
 	-webkit-app-region: no-drag;
